# smart-order-router

./: .gitignore  Dockerfile  README.md  cabal.project  geniusyield-orderbot.cabal
.github/workflows/: build.yml
complex-impl/datasource-arbitrary/GeniusYield/OrderBot/DataSource/: Arbitrary.hs
complex-impl/orderbook-annset/GeniusYield/OrderBot/OrderBook/: AnnSet.hs
complex-impl/strategies-impl/GeniusYield/OrderBot/Strategies/: Impl.hs
config-files/: complex-bot-config.json  mainnet-config-core.json  preprod-config-core.json  simple-bot-config.json
geniusyield-annset/: geniusyield-annset.cabal
geniusyield-annset/src/GeniusYield/AnnSet/: Internal.hs  Types.hs  Unsafe.hs
geniusyield-annset/tests/: Properties.hs  Spec.hs
geniusyield-orderbot-framework/: geniusyield-orderbot-framework.cabal
geniusyield-orderbot-framework/lib-common/GeniusYield/OrderBot/: Oracle.hs  Types.hs
geniusyield-orderbot-framework/lib-datasource/GeniusYield/OrderBot/: DataSource.hsig
geniusyield-orderbot-framework/lib-orderbook/GeniusYield/OrderBot/: OrderBook.hsig
geniusyield-orderbot-framework/lib-strategies/GeniusYield/OrderBot/: Strategies.hsig
geniusyield-orderbot-framework/src/GeniusYield/: OrderBot.hs
geniusyield-orderbot-framework/src/GeniusYield/OrderBot/: MatchingStrategy.hs  OrderBotConfig.hs  Run.hs
geniusyield-orderbot/complex-test/: Main.hs
geniusyield-orderbot/complex-test/Tests/Prop/: Orderbook.hs  Strategies.hs  Utils.hs
geniusyield-orderbot/simple-test/Tests/Prop/: Strategies.hs  Utils.hs
geniusyield-orderbot/src/: Main.hs
geniusyield-orderbot/test/Tests/Prop/: Orderbook.hs  Strategies.hs  Utils.hs
impl/datasource-providers/GeniusYield/OrderBot/DataSource/: Providers.hs
impl/strategies-impl/GeniusYield/OrderBot/Strategies/: Impl.hs
simple-impl/orderbook-list/GeniusYield/OrderBot/OrderBook/: List.hs
simple-impl/strategies-impl/GeniusYield/OrderBot/Strategies/: Impl.hs
