cabal-version: 3.12
name: geniusyield-orderbot
version: 0.2.0
synopsis: Smart Order Router
description:
  Open-source Smart Order Router framework to connect liquidity from
  the GeniusYield DEX to empowers users to deploy their own arbitrage
  strategies and bring true decentralization to the Cardano Defi
  ecosystem.

license: Apache-2.0
license-file: LICENSE
copyright: (c) 2023 GYELD GMBH
author: Lars Bruenjes
maintainer: support@geniusyield.co
category: Blockchain, Cardano, Framework
homepage: https://github.com/geniusyield/smart-order-router#readme
bug-reports: https://github.com/geniusyield/smart-order-router/issues
extra-source-files: README.md
extra-doc-files: CHANGELOG.md

-- Common sections
common common-ghc-opts
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wno-unused-do-bind
    -Wno-partial-type-signatures
    -Wincomplete-record-updates
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wunused-foralls
    -Wno-unticked-promoted-constructors
    -fprint-explicit-foralls
    -fprint-explicit-kinds

common common-deps
  build-depends:
    , aeson
    , aeson-pretty
    , atlas-cardano
    , base
    , bytestring
    , containers
    , mtl
    , mwc-random
    , pretty-simple
    , random
    , random-fu
    , serialise
    , text
    , vector

common common-lang
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PatternGuards
    PatternSynonyms
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    UnboxedTuples
    ViewPatterns

-- Build targets
library datasource-providers
  import: common-lang
  import: common-deps
  import: common-ghc-opts
  hs-source-dirs: simple-impl/datasource-providers
  build-depends:
    , geniusyield-dex-api
    , geniusyield-orderbot-framework:common

  exposed-modules: GeniusYield.OrderBot.DataSource.Providers
  visibility: public

library orderbook-list
  import: common-lang
  import: common-deps
  import: common-ghc-opts
  hs-source-dirs: simple-impl/orderbook-list
  build-depends:
    , geniusyield-dex-api
    , geniusyield-orderbot-framework:common
    , geniusyield-orderbot-framework:datasource

  exposed-modules:
    GeniusYield.OrderBot.OrderBook.List

  visibility: public

library simple-strategies-impl
  import: common-lang
  import: common-deps
  import: common-ghc-opts
  hs-source-dirs: simple-impl/strategies-impl
  build-depends:
    , envy
    , geniusyield-dex-api
    , geniusyield-orderbot-framework:common
    , geniusyield-orderbot-framework:orderbook

  exposed-modules:
    GeniusYield.OrderBot.Strategies.Impl

  visibility: public

-- The primary orderbot executable - this must be instantiated with the signature
-- implementations.
executable simple-geniusyield-orderbot-exe
  import: common-lang
  import: common-deps
  import: common-ghc-opts
  hs-source-dirs: geniusyield-orderbot/src
  main-is: Main.hs
  build-depends:
    , cardano-api
    , envy
    , geniusyield-dex-api
    , geniusyield-orderbot:datasource-providers
    , geniusyield-orderbot:orderbook-list
    , geniusyield-orderbot:simple-strategies-impl
    , geniusyield-orderbot-framework
    , geniusyield-orderbot-framework:common
    , plutus-ledger-api
    , ply-core

  mixins:
    , geniusyield-orderbot:orderbook-list requires (GeniusYield.OrderBot.DataSource as GeniusYield.OrderBot.DataSource.Providers)
    , geniusyield-orderbot:simple-strategies-impl requires (GeniusYield.OrderBot.DataSource as GeniusYield.OrderBot.DataSource.Providers, GeniusYield.OrderBot.OrderBook as GeniusYield.OrderBot.OrderBook.List)
    , geniusyield-orderbot-framework requires (GeniusYield.OrderBot.DataSource as GeniusYield.OrderBot.DataSource.Providers, GeniusYield.OrderBot.OrderBook as GeniusYield.OrderBot.OrderBook.List, GeniusYield.OrderBot.Strategies as GeniusYield.OrderBot.Strategies.Impl)

  ghc-options:
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite simple-strategies-tests
  import: common-lang
  import: common-deps
  import: common-ghc-opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: geniusyield-orderbot/simple-test/
  other-modules:
    Tests.Prop.Orderbook
    Tests.Prop.Strategies
    Tests.Prop.Utils

  build-depends:
    , QuickCheck
    , cardano-api
    , envy
    , geniusyield-dex-api
    , geniusyield-orderbot:{datasource-providers, orderbook-list, simple-strategies-impl}
    , geniusyield-orderbot-framework
    , geniusyield-orderbot-framework:common
    , tasty
    , tasty-quickcheck

  mixins:
    , geniusyield-orderbot:orderbook-list requires (GeniusYield.OrderBot.DataSource as GeniusYield.OrderBot.DataSource.Providers)
    , geniusyield-orderbot:simple-strategies-impl requires (GeniusYield.OrderBot.DataSource as GeniusYield.OrderBot.DataSource.Providers, GeniusYield.OrderBot.OrderBook as GeniusYield.OrderBot.OrderBook.List)
    , geniusyield-orderbot-framework requires (GeniusYield.OrderBot.DataSource as GeniusYield.OrderBot.DataSource.Providers, GeniusYield.OrderBot.OrderBook as GeniusYield.OrderBot.OrderBook.List, GeniusYield.OrderBot.Strategies as GeniusYield.OrderBot.Strategies.Impl)

library orderbook-annset
  import:          common-lang
  import:          common-deps
  import:          common-ghc-opts
  hs-source-dirs:  complex-impl/orderbook-annset
  build-depends:
    , geniusyield-annset
    , geniusyield-orderbot-framework:{common, datasource}
    , geniusyield-dex-api
 
  exposed-modules: GeniusYield.OrderBot.OrderBook.AnnSet
 
library datasource-arbitrary
  import:          common-lang
  import:          common-deps
  import:          common-ghc-opts
  hs-source-dirs:  complex-impl/datasource-arbitrary
  build-depends:
    , cardano-api:{cardano-api, gen}
    , geniusyield-orderbot-framework:common
    , hedgehog

  exposed-modules: GeniusYield.OrderBot.DataSource.Arbitrary

library complex-strategies-impl
  import:          common-lang
  import:          common-deps
  import:          common-ghc-opts
  hs-source-dirs:  complex-impl/strategies-impl
  build-depends:
    , envy
    , geniusyield-orderbot-framework:{common, orderbook}
    , geniusyield-dex-api
  exposed-modules: GeniusYield.OrderBot.Strategies.Impl
  ghc-options:     -O2

executable complex-geniusyield-orderbot-exe
  import:         common-lang
  import:         common-deps
  import:         common-ghc-opts
  hs-source-dirs: geniusyield-orderbot/src
  main-is:        Main.hs
  build-depends:
    , cardano-api
    , envy
    , geniusyield-annset
    , geniusyield-dex-api
    , geniusyield-orderbot-framework
    , geniusyield-orderbot-framework:common
    , geniusyield-orderbot:{datasource-providers}
    , geniusyield-orderbot:{orderbook-annset, complex-strategies-impl}

  mixins:
    , geniusyield-orderbot:orderbook-annset requires (GeniusYield.OrderBot.DataSource as GeniusYield.OrderBot.DataSource.Providers)
    , geniusyield-orderbot-framework requires (GeniusYield.OrderBot.DataSource as GeniusYield.OrderBot.DataSource.Providers, GeniusYield.OrderBot.OrderBook as GeniusYield.OrderBot.OrderBook.AnnSet, GeniusYield.OrderBot.Strategies as GeniusYield.OrderBot.Strategies.Impl)
    , geniusyield-orderbot:complex-strategies-impl requires
        ( GeniusYield.OrderBot.OrderBook as GeniusYield.OrderBot.OrderBook.AnnSet
        , GeniusYield.OrderBot.DataSource as GeniusYield.OrderBot.DataSource.Providers
        )

  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N


test-suite complex-strategies-tests
  import:         common-lang
  import:         common-deps
  import:         common-ghc-opts
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: geniusyield-orderbot/complex-test/
  other-modules:
    Tests.Prop.Orderbook
    Tests.Prop.Strategies
    Tests.Prop.Utils

  build-depends:
    , cardano-api
    , envy
    , geniusyield-annset
    , geniusyield-dex-api
    , geniusyield-orderbot-framework:{geniusyield-orderbot-framework, common}
    , geniusyield-orderbot:{datasource-providers}
    , geniusyield-orderbot:{orderbook-annset, complex-strategies-impl}
    , QuickCheck
    , tasty
    , tasty-quickcheck

  mixins:
    , geniusyield-orderbot:orderbook-annset requires (GeniusYield.OrderBot.DataSource as GeniusYield.OrderBot.DataSource.Providers)
    , geniusyield-orderbot-framework requires (GeniusYield.OrderBot.DataSource as GeniusYield.OrderBot.DataSource.Providers, GeniusYield.OrderBot.OrderBook as GeniusYield.OrderBot.OrderBook.AnnSet, GeniusYield.OrderBot.Strategies as GeniusYield.OrderBot.Strategies.Impl)
    , geniusyield-orderbot:complex-strategies-impl requires
        ( GeniusYield.OrderBot.OrderBook as GeniusYield.OrderBot.OrderBook.AnnSet
        , GeniusYield.OrderBot.DataSource as GeniusYield.OrderBot.DataSource.Providers
        )
